--- a/src/StoreBundle/Resources/config/routing.yml
+++ b/src/StoreBundle/Resources/config/routing.yml
@@ -6,3 +6,6 @@ store_ann:
     resource: "@StoreBundle/Controller/"
     type:     annotation
 
+storia:
+    path:     /storia
+    defaults: { _controller: StoreBundle:Storia:index }
